<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <!-- CHAMP DE TEXTE -->
    <EditText
        android:id="@+id/edittext_task_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/hint_task"
        android:inputType="text" />

    <!-- BOUTON AJOUTER -->
    <Button
        android:id="@+id/btn_task_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        android:layout_marginStart="8dp" />

    <!-- BOUTON SUPPRIMER -->
    <Button
        android:id="@+id/btn_task_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        android:layout_marginStart="4dp" />

</LinearLayout>
